# DisCalendarV3

./: .env.dev  .gitignore  .markdownlint.yml  LICENSE  Makefile.toml  README.md  docker-compose.dev.yml  docker-compose.yml
api/: .gitignore  Cargo.toml  dev.Dockerfile  devcontainer.json  entrypoint.sh
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220803_053917_create_event.rs  m20220816_074716_billing.rs
api/migrations/: 20220728102021_init.sql
api/scripts/: generate_models.sh  install_devtools.sh  install_requirements.sh
api/sqlx-macros/: Cargo.toml
api/sqlx-macros/src/: lib.rs
api/src/: auth_client.rs  discord.rs  error.rs  lib.rs  prelude.rs
api/src/models/: billing.rs  event.rs  guild.rs  mod.rs  prelude.rs
api/src/routes/: mod.rs
api/src/routes/guilds/: list.rs  mod.rs  tmp.rs
api/src/routes/guilds/id/: channels.rs  mod.rs
api/src/routes/guilds/id/events/: create.rs  mod.rs
api/src/routes/oauth2/: callback.rs  login.rs  logout.rs  mod.rs
api/src/routes/oauth2/google/: auth.rs  callback.rs  mod.rs  refresh.rs  revoke.rs
api/src/routes/payment/: checkout.rs  list_donate.rs  mod.rs  register.rs
api/src/routes/users/: me.rs  mod.rs
bot/: dev.Dockerfile
db/: Dockerfile
web/: .eslintrc.yml  .gitignore  app.vue  dev.Dockerfile  entrypoint.sh  index.d.ts  nuxt.config.ts  package.json
web/components/: LoadingBar.vue  LoadingIndicator.vue
web/composables/: useApi.ts  useAuth.ts  useDate.ts  useDialog.ts  useGuild.ts  useLoading.ts  useMicroCms.ts  useSnackbar.ts  useStripe.ts  useUI.ts  useUser.ts
web/content/: privacy.md  tos.md
(+33 files in other folders)
