[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  ".",
  "migration"
]

[dependencies.sqlx-macros]
path = "./sqlx-macros"

[dependencies]
actix-session = { version = "0.7.1", features = ["cookie-session", "redis-actor-session"] }
actix-web = "4.1.0"
anyhow = "1.0.58"
async-trait = "0.1.56"
base64 = "0.13.0"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.11", features = ["gzip", "json", "cookies"] }
# sqlx = { version = "0.6.0", features = ["macros", "postgres", "runtime-actix-rustls", "chrono"], default-features = false }
sea-orm = { version = "0.9.1", features = ["sqlx-postgres", "runtime-actix-rustls", "debug-print"] }
thiserror = "1.0.31"
oauth2 = "4.2.3"
serde = { version = "1.0.140", features = ["derive"] }
getset = "0.1.2"
serenity = { version = "0.11.4", features = ["rustls_backend", "model"], default-features = false }
yup-oauth2 = "7.0.1"
