[package]
name = "sqlx-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.42"
quote = "1.0.20"
sqlx = { version = "0.6.0", features = ["postgres", "runtime-actix-rustls", "chrono"], default-features = false }
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
